--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "main": "index.js",
   "scripts": {
+    "find-unused-rules": "eslint-find-rules -u index.js",
+    "find-unused-rules:react": "eslint-find-rules -u react.js",
     "lint": "eslint . --cache",
     "deploy": "git pull --rebase origin master && git push origin master",
     "patch": "npm version patch && npm publish",
