--- a/package.json
+++ b/package.json
@@ -31,14 +31,25 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
-  "devDependencies": {
+  "peerDependencies": {
     "eslint": "2.8.0",
     "eslint-config-airbnb": "7.0.0",
-    "eslint-find-rules": "1.3.0",
     "eslint-plugin-ava": "2.2.1",
     "eslint-plugin-import": "1.4.0",
     "eslint-plugin-jsx-a11y": "0.6.2",
     "eslint-plugin-lodash": "1.6.5",
     "eslint-plugin-react": "4.3.0"
+  },
+  "dependencies": {
+    "eslint-config-airbnb": "7.0.0",
+    "eslint-plugin-ava": "2.2.1",
+    "eslint-plugin-import": "1.4.0",
+    "eslint-plugin-jsx-a11y": "0.6.2",
+    "eslint-plugin-lodash": "1.6.5",
+    "eslint-plugin-react": "4.3.0"
+  },
+  "devDependencies": {
+    "eslint": "2.8.0",
+    "eslint-find-rules": "1.3.0"
   }
 }
