--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "peerDependencies": {
+    "babel-eslint": "6.0.2",
     "eslint": "2.8.0",
     "eslint-config-airbnb": "7.0.0",
     "eslint-plugin-ava": "2.2.1",
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "4.3.0"
   },
   "dependencies": {
+    "babel-eslint": "6.0.2",
     "eslint-config-airbnb": "7.0.0",
     "eslint-plugin-ava": "2.2.1",
     "eslint-plugin-import": "1.4.0",
