--- a/package.json
+++ b/package.json
@@ -32,26 +32,27 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "peerDependencies": {
-    "babel-eslint": "6.0.4",
-    "eslint": "2.13.0",
-    "eslint-config-airbnb": "9.0.1",
+    "babel-eslint": "6.1.2",
+    "eslint": "3.2.2",
+    "eslint-config-airbnb": "10.0.0",
     "eslint-plugin-ava": "2.5.0",
-    "eslint-plugin-import": "1.8.1",
-    "eslint-plugin-jsx-a11y": "1.5.3",
-    "eslint-plugin-lodash": "1.9.2",
-    "eslint-plugin-react": "5.2.2"
+    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-jsx-a11y": "2.0.1",
+    "eslint-plugin-lodash": "1.10.1",
+    "eslint-plugin-react": "6.0.0",
+    "eslint-find-rules": "1.13.0"
   },
   "dependencies": {
-    "babel-eslint": "6.0.4",
-    "eslint-config-airbnb": "9.0.1",
+    "babel-eslint": "6.1.2",
+    "eslint-config-airbnb": "10.0.0",
     "eslint-plugin-ava": "2.5.0",
-    "eslint-plugin-import": "1.8.1",
-    "eslint-plugin-jsx-a11y": "1.5.3",
-    "eslint-plugin-lodash": "1.9.2",
-    "eslint-plugin-react": "5.2.2"
+    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-jsx-a11y": "2.0.1",
+    "eslint-plugin-lodash": "1.10.1",
+    "eslint-plugin-react": "6.0.0"
   },
   "devDependencies": {
-    "eslint": "2.13.0",
-    "eslint-find-rules": "1.10.0"
+    "eslint": "3.2.2",
+    "eslint-find-rules": "1.13.0"
   }
 }
