--- a/package.json
+++ b/package.json
@@ -32,27 +32,27 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "peerDependencies": {
-    "babel-eslint": "6.1.2",
-    "eslint": "3.2.2",
-    "eslint-config-airbnb": "10.0.0",
-    "eslint-plugin-ava": "2.5.0",
-    "eslint-plugin-import": "1.12.0",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-lodash": "1.10.1",
-    "eslint-plugin-react": "6.0.0",
-    "eslint-find-rules": "1.13.0"
+    "babel-eslint": "*",
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-plugin-ava": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-lodash": "*",
+    "eslint-plugin-react": "*",
+    "eslint-find-rules": "*"
   },
   "dependencies": {
-    "babel-eslint": "6.1.2",
-    "eslint-config-airbnb": "10.0.0",
-    "eslint-plugin-ava": "2.5.0",
-    "eslint-plugin-import": "1.12.0",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-lodash": "1.10.1",
-    "eslint-plugin-react": "6.0.0"
+    "babel-eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-plugin-ava": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-lodash": "*",
+    "eslint-plugin-react": "*"
   },
   "devDependencies": {
-    "eslint": "3.2.2",
-    "eslint-find-rules": "1.13.0"
+    "eslint": "*",
+    "eslint-find-rules": "*"
   }
 }
