Revert "Remove now useless babel-eslint dep"
550f105a1b22f8260c93a36d59258a46cf8f8567

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "peerDependencies": {
+    "babel-eslint": "*",
     "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-plugin-ava": "*",
@@ -42,6 +43,7 @@
     "eslint-find-rules": "*"
   },
   "dependencies": {
+    "babel-eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-plugin-ava": "*",
     "eslint-plugin-import": "*",
