--- a/package.json
+++ b/package.json
@@ -31,16 +31,28 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
-  "peerDependencies": {},
-  "dependencies": {},
-  "devDependencies": {
+  "peerDependencies": {
     "babel-eslint": "*",
-    "eslint": "3.9.1",
-    "eslint-config-airbnb": "13.0.0",
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
     "eslint-plugin-ava": "*",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-import": "*",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-lodash": "*",
-    "eslint-plugin-react": "6.6.0"
+    "eslint-plugin-react": "*",
+    "eslint-find-rules": "*"
+  },
+  "dependencies": {
+    "babel-eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-plugin-ava": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-lodash": "*",
+    "eslint-plugin-react": "*"
+  },
+  "devDependencies": {
+    "eslint": "*",
+    "eslint-find-rules": "*"
   }
 }
