--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-config-airbnb": "*",
     "eslint-plugin-ava": "*",
     "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-jsx-a11y": "*",
     "eslint-plugin-lodash": "*",
     "eslint-plugin-react": "*",
     "eslint-find-rules": "*"
@@ -47,7 +47,7 @@
     "eslint-config-airbnb": "*",
     "eslint-plugin-ava": "*",
     "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-jsx-a11y": "*",
     "eslint-plugin-lodash": "*",
     "eslint-plugin-react": "*"
   },
