--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "eslint-config-gowento",
   "version": "3.4.0",
   "description": "Shared ESLint config used in Gowento projects.",
+  "author": "Gowento <hackers@gowento.com>",
   "contributors": [
-    "Loris Guignard <loris.guignard@gmail.com>"
+    "Loris Guignard <loris.guignard@gmail.com>",
+    "Eric Redon <eric.redon@coox.org>"
   ],
   "main": "index.js",
   "scripts": {
     "find-unused-rules": "eslint-find-rules -u index.js",
-    "find-unused-rules:react": "eslint-find-rules -u react.js",
     "lint": "eslint . --cache",
     "deploy": "git pull --rebase origin master && git push origin master",
     "patch": "npm version patch && npm publish",
@@ -22,8 +23,7 @@
     "eslint-config"
   ],
   "files": [
-    "index.js",
-    "react.js"
+    "index.js"
   ],
   "repository": {
     "type": "git",
@@ -31,28 +31,15 @@
   },
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
-  "peerDependencies": {
-    "babel-eslint": "*",
-    "eslint": "*",
-    "eslint-config-airbnb": "*",
-    "eslint-plugin-ava": "*",
-    "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-lodash": "*",
-    "eslint-plugin-react": "*",
-    "eslint-find-rules": "*"
-  },
   "dependencies": {
-    "babel-eslint": "*",
-    "eslint-config-airbnb": "*",
-    "eslint-plugin-ava": "*",
-    "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-lodash": "*",
-    "eslint-plugin-react": "*"
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-plugin-ava": "4.2.0",
+    "eslint-plugin-lodash": "2.4.2"
   },
   "devDependencies": {
     "eslint": "*",
-    "eslint-find-rules": "*"
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jsx-a11y": "*",
+    "eslint-plugin-react": "*"
   }
 }
