--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "dependencies": {
+    "babel-eslint": "7.2.3",
     "eslint-config-airbnb": "15.0.1",
     "eslint-plugin-ava": "4.2.0",
     "eslint-plugin-import": "*",
