--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "dependencies": {
-    "babel-eslint": "7.2.3",
-    "eslint-config-airbnb": "15.0.1",
-    "eslint-plugin-ava": "4.2.0",
-    "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-lodash": "2.4.2",
-    "eslint-plugin-react": "*"
+    "babel-eslint": "^7.2.3",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-ava": "^4.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-lodash": "^2.4.4",
+    "eslint-plugin-react": "^7.1.0"
   },
   "devDependencies": {
-    "eslint": "*"
+    "eslint": "^3.19.0 || ^4.3.0"
+  },
+  "peerDependencies": {
+    "eslint": "^3.19.0 || ^4.3.0"
   }
 }
