--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "dependencies": {
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-ava": "^4.2.2",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-lodash": "^2.5.0",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-ava": "5.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-lodash": "2.7.0",
+    "eslint-plugin-react": "7.11.1"
   },
   "devDependencies": {
-    "eslint": "^4.9.0"
+    "eslint": "5.4.0"
   },
   "peerDependencies": {
-    "eslint": "^4.9.0"
+    "eslint": "4.9.0"
   }
 }
