--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-gowento",
-  "version": "4.2.0",
+  "version": "5.0.1",
   "description": "Shared ESLint config used in Gowento projects.",
   "author": "Gowento <hackers@gowento.com>",
   "contributors": [
@@ -30,6 +30,7 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento#readme",
   "dependencies": {
+    "babel-eslint": "8.2.6",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-ava": "5.1.0",
     "eslint-plugin-import": "2.14.0",
@@ -41,6 +42,6 @@
     "eslint": "5.4.0"
   },
   "peerDependencies": {
-    "eslint": "4.9.0"
+    "eslint": "5.4.0"
   }
 }
