Add `prettier.config.js` to published files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-config"
   ],
   "files": [
-    "index.js"
+    "index.js",
+    "prettier.config.js"
   ],
   "repository": {
     "type": "git",
