--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "eslint-plugin-react": "7.11.1"
   },
   "devDependencies": {
-    "eslint": "5.4.0"
+    "eslint": "5.4.0",
+    "prettier": "1.14.2"
   },
   "peerDependencies": {
     "eslint": "5.4.0",
