--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prettier": "1.14.2"
   },
   "peerDependencies": {
-    "eslint": "5.4.0",
-    "prettier": "1.14.2"
+    "eslint": "^5.5.0",
+    "prettier": "^1.14.2"
   }
 }
