Update and lint package.json, lock dependencies for npm+yarn

--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   },
   "keywords": [
     "eslint",
-    "eslint-config"
+    "eslint-config",
+    "prettier",
+    "standard",
+    "react",
+    "lodash",
+    "ava"
   ],
   "files": [
     "index.js",
