--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-lodash": "5.1.0",
     "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.12.0"
   },
   "devDependencies": {
