Move Rules of Hooks to non-dev deps

--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "eslint-plugin-lodash": "5.1.0",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": "4.0.1",
-    "eslint-plugin-react": "7.12.4"
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "1.0.1"
   },
   "devDependencies": {
     "eslint": "5.13.0",
-    "eslint-plugin-react-hooks": "1.0.1",
     "np": "4.0.2",
     "prettier": "1.16.4"
   },
