Add empty test script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "release": "np"
+    "release": "np",
+    "test": "echo \"No test were written\" && exit 0"
   },
   "keywords": [
     "eslint",
