--- a/package.json
+++ b/package.json
@@ -33,22 +33,23 @@
   "license": "MIT",
   "homepage": "https://github.com/gowento/eslint-config-gowento",
   "dependencies": {
-    "babel-eslint": "10.0.3",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "6.10.0",
+    "babel-eslint": "10.1.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-prettier": "6.10.1",
     "eslint-plugin-ava": "10.2.0",
+    "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-lodash": "6.0.0",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.18.3",
-    "eslint-plugin-react-hooks": "2.4.0"
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.1"
   },
   "devDependencies": {
     "eslint": "6.8.0",
-    "np": "6.1.0",
-    "prettier": "1.19.1"
+    "np": "6.2.0",
+    "prettier": "2.0.1"
   },
   "peerDependencies": {
     "eslint": "^6.1.0",
