--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "7.16.0",
     "@babel/eslint-parser": "7.16.3",
     "@babel/preset-react": "7.16.0",
+    "babel-preset-react-app": "10.0.0",
     "eslint-config-airbnb": "19.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-ava": "13.1.0",
