--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "index.js",
     "prettier.config.js"
   ],
+  "engines": {
+    "node": "^10.12.0 || ^12.22.0 || ^14.17.0 || >=16.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:gowento/eslint-config-gowento.git"
